--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "@chenfengyuan/vue-countdown": "^1.1.5",
+        "laravel-vue-pagination": "^2.3.1",
         "vue-router": "^3.4.9"
     }
 }
